--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ SMTP_PORT=587
 SMTP_USER=
 SMTP_PASS=
 WHATSAPP_API_KEY=
+WHATSAPP_API_URL=
+NOTIFY_EMAIL=
+NOTIFY_WHATSAPP=
+UNIO_URL=https://edi-unoi-mx.stn-neds.com/notificacion/notifications/received
+UNIO_LOGIN_URL=https://edi-unoi-mx.stn-neds.com/ts/view/access
+DATA_STORE_PATH=data.json
+USE_BROWSER_RENDERER=0
+UNIO_USER=matiasalexander.martinez.1
+UNIO_PASS=211423
