--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ Flask==2.3.3
 gunicorn==20.1.0
 requests==2.31.0
 python-dotenv==1.0.0
+beautifulsoup4==4.12.2
+selenium==4.11.2
+webdriver-manager==3.8.6
 
 # Optional but recommended for simple persistence and utilities
 tinydb==4.7.0
